--- a/Mykonoshot5.html
+++ b/Mykonoshot5.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mykonos – Menü</title>
-<meta name="description" content="Mykonos – Griechisches Restaurant. Komplettes Menü zum Scrollen.">
+<title>Mykonos – Menü (PDF-Scroll)</title>
+<meta name="description" content="Gesamtes Menü als eingebettete PDFs – einfach nach unten scrollen.">
 <style>
   :root{--bg:#fff;--ink:#0a1633;--muted:#6b7280;--brand:#0a4aa4;--surface:#f7f8fb;--border:#e5e9f2;--shadow:0 10px 30px rgba(10,23,54,.08)}
   *{box-sizing:border-box} html{scroll-behavior:smooth}
   body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.6}
   .container{max-width:1100px;margin:0 auto;padding:0 18px}
-  .section{padding:56px 0} .center{text-align:center} .muted{color:var(--muted)}
+  .section{padding:48px 0} .center{text-align:center} .muted{color:var(--muted)}
   /* Sticky header */
   .site-header{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--border);box-shadow:0 4px 18px rgba(0,0,0,.04)}
   .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
@@ -19,24 +19,19 @@
   .navlinks{display:flex;gap:10px;flex-wrap:wrap}
   .navlinks a{padding:.45rem .65rem;border-radius:.55rem;color:inherit;text-decoration:none}
   .navlinks a:hover{background:var(--surface)}
-  /* Greek border (top/bottom of sections) */
+  /* Greek border for sections */
   .greek{position:relative;isolation:isolate;border-block:14px solid transparent}
   .greek::before,.greek::after{content:"";position:absolute;inset-inline:0;height:14px;z-index:-1;
     background:repeating-linear-gradient(90deg,var(--brand) 0 14px,transparent 14px 16px),
                repeating-linear-gradient(90deg,var(--brand) 0 2px,transparent 2px 16px)}
   .greek::before{top:0} .greek::after{bottom:0;transform:scaleY(-1)}
-  /* Hero */
-  .hero{padding:60px 0;background:
-    radial-gradient(1200px 500px at 85% -80px, rgba(10,74,164,.10), transparent 60%),
-    radial-gradient(1000px 420px at -10% 0, rgba(30,127,209,.10), transparent 55%)}
-  .hero h1{font-size:clamp(2rem,4.5vw,3rem);margin:.2rem 0 .4rem;letter-spacing:.3px}
-  .lead{color:var(--muted);max-width:60ch;margin:0 auto}
-  /* Menu stack */
-  .menu-stack{display:grid;gap:18px}
-  .menu-card{background:#fff;border:1px solid var(--border);border-radius:16px;overflow:hidden;box-shadow:var(--shadow)}
-  .menu-card h3{margin:0;padding:10px 14px;border-bottom:1px solid var(--border);font-size:1rem;background:var(--surface)}
-  .menu-card img{display:block;width:100%;height:auto}
-  .menu-card object{display:block;width:100%;height:80vh;max-height:960px;border:0}
+  /* Cards with embedded PDFs */
+  .menu-stack{display:grid;gap:22px}
+  .card{background:#fff;border:1px solid var(--border);border-radius:16px;overflow:hidden;box-shadow:var(--shadow)}
+  .card h3{margin:0;padding:12px 16px;border-bottom:1px solid var(--border);font-size:1.05rem;background:var(--surface)}
+  .card object{display:block;width:100%;height:90vh;max-height:1000px;border:0}
+  .dl{padding:10px 16px;border-top:1px solid var(--border);background:#fff}
+  .dl a{color:var(--brand);text-decoration:none;font-weight:700}
   footer{border-top:1px solid var(--border);padding:16px 0;text-align:center;color:var(--muted)}
 </style>
 </head>
@@ -44,58 +39,113 @@
 
 <header class="site-header">
   <div class="container nav">
-    <a class="brand" href="#">
+    <a class="brand" href="index.html">
       <svg class="mark" viewBox="0 0 64 64" aria-hidden="true">
         <circle cx="32" cy="32" r="27" fill="none" stroke="#0a4aa4" stroke-width="4"/>
         <path d="M16 38c7-9 14-12 18-12s11 3 18 12" fill="none" stroke="#0a4aa4" stroke-width="5" stroke-linecap="round"/>
       </svg>
       <strong>Mykonos</strong>
     </a>
-    <nav class="navlinks" aria-label="Navigation">
-      <a href="#menu">Menü</a>
-      <a href="#kontakt">Kontakt</a>
-      <a href="index.html">Startseite</a>
+    <nav class="navlinks">
+      <a href="#salate">Salate</a>
+      <a href="#mykonos">Mykonos Spezialitäten</a>
+      <a href="#leber-fisch">Leber & Fisch</a>
+      <a href="#lamm">Lamm vom Grill</a>
+      <a href="#kinder">Kinder & Dessert</a>
+      <a href="#ueberbacken">Überbackene Gerichte</a>
+      <a href="#kaese">Käse</a>
+      <a href="#spirit">Spirituosen</a>
+      <a href="#getraenke">Getränke</a>
     </nav>
   </div>
 </header>
 
-<section class="hero greek">
-  <div class="container center">
-    <h1>Menü – Mykonos</h1>
-    <p class="lead">Scrolle nach unten. Bilder und PDFs sind hier eingebettet.</p>
-  </div>
+<section class="section container greek center">
+  <h1 style="margin:.2rem 0 .4rem">Menü – einfach nach unten scrollen</h1>
+  <p class="muted">Alle Seiten sind als PDF eingebettet. Tippe auf „PDF öffnen“, wenn dein Browser die Anzeige blockiert.</p>
 </section>
 
 <section id="menu" class="section container">
   <div class="menu-stack">
 
-    <!-- 1) ТВОЯТА СНИМКА: assets/menu/IMG_1485.png -->
-    <div class="menu-card">
-      <h3>Menü – Bildseite</h3>
-      <img loading="lazy" src="assets/menu/IMG_1485.png" alt="Menü Bild">
-    </div>
-
-    <!-- 2) ТВОЯТ PDF: assets/menu/SALATE_FINAL.pdf -->
-    <div class="menu-card">
-      <h3>Salate (PDF eingebettet)</h3>
+    <div id="salate" class="card">
+      <h3>Salate</h3>
       <object data="assets/menu/SALATE_FINAL.pdf" type="application/pdf">
-        <p>Dein Browser blockiert PDFs. <a href="assets/menu/SALATE_FINAL.pdf" target="_blank" rel="noopener">Hier öffnen</a>.</p>
+        <p>PDF nicht angezeigt. <a href="assets/menu/SALATE_FINAL.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
       </object>
+      <div class="dl"><a href="assets/menu/SALATE_FINAL.pdf" download>PDF herunterladen</a></div>
     </div>
 
-    <!-- ДОБАВЯЙ ОЩЕ: копирай card-а отгоре и сменяй името на файла в src= или data= -->
+    <div id="mykonos" class="card">
+      <h3>Mykonos Spezialitäten</h3>
+      <object data="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
+    </div>
+
+    <div id="leber-fisch" class="card">
+      <h3>Leber & Fisch-Spezialitäten</h3>
+      <object data="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
+    </div>
+
+    <div id="lamm" class="card">
+      <h3>Lamm vom Grill</h3>
+      <object data="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf" download>PDF herunterladen</a></div>
+    </div>
+
+    <div id="kinder" class="card">
+      <h3>Kinder Teller & Dessert</h3>
+      <object data="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf" download>PDF herunterladen</a></div>
+    </div>
+
+    <div id="ueberbacken" class="card">
+      <h3>Überbackene Gerichte</h3>
+      <object data="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf" download>PDF herunterladen</a></div>
+    </div>
+
+    <div id="kaese" class="card">
+      <h3>Käse</h3>
+      <object data="assets/menu/KAESE_MENU_FINAL.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/KAESE_MENU_FINAL.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/KAESE_MENU_FINAL.pdf" download>PDF herunterladen</a></div>
+    </div>
+
+    <div id="spirit" class="card">
+      <h3>Spirituosen & Liköre</h3>
+      <object data="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf" download>PDF herunterladen</a></div>
+    </div>
+
+    <div id="getraenke" class="card">
+      <h3>Getränke</h3>
+      <object data="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf" type="application/pdf">
+        <p>PDF nicht angezeigt. <a href="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf" target="_blank" rel="noopener">PDF öffnen</a>.</p>
+      </object>
+      <div class="dl"><a href="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf" download>PDF herunterladen</a></div>
+    </div>
+
   </div>
 </section>
 
-<section id="kontakt" class="section container">
-  <h2 class="center" style="margin:0 0 12px">Kontakt</h2>
-  <p class="center muted">Adresse: Hauptstraße 1, 12345 Musterstadt · Tel: <a href="tel:+49XXXXXXXXX">+49 XXX XXX XXX</a></p>
-</section>
-
-<footer>
+<footer class="center" style="border-top:1px solid var(--border);padding:16px 0;color:var(--muted)">
   © <span id="y"></span> Mykonos
 </footer>
-
 <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
 </body>
 </html>
